2004-06-6  Andrea Michelotti  <amichelotti@atmel.com>

	* cdl/hal_arm_at91_jtst.cdl: 
	* include/plf_io.h: 
	* include/hal_platform_setup.h: 
	* include/hal_platform_ints.h: 
	* include/pkgconf/mlt_arm_at91_jtst_ram.ldi: 
	* include/pkgconf/mlt_arm_at91_jtst_ram.h: 
	* include/pkgconf/mlt_arm_at91_jtst_rom.ldi: 
	* include/pkgconf/mlt_arm_at91_jtst_rom.h: 
	* include/pkgconf/mlt_arm_at91_jtst_romram.ldi: 
	* include/pkgconf/mlt_arm_at91_jtst_romram.h: 
	* src/jtst_misc.c: 
	New HAL added to support Atmel JTST board (based on Diopsis chip). 
	Adapted from the EB40 and EB40A HALs by Thomas Koeller and Tim Drury.


//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
// Copyright (C) 2003 Nick Garnett <nickg@calivar.com>
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//
// You should have received a copy of the GNU General Public License along
// with eCos; if not, write to the Free Software Foundation, Inc.,
// 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
//
// As a special exception, if other files instantiate templates or use macros
// or inline functions from this file, or you compile this file and link it
// with other works to produce a work based on this file, this file does not
// by itself cause the resulting work to be covered by the GNU General Public